--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,18 +28,18 @@ services:
       - otel-network
 
   # OpenSearch Dashboards
-  # opensearch-dashboards:
-  #   image: opensearchproject/opensearch-dashboards:2.11.1
-  #   container_name: opensearch-dashboards
-  #   ports:
-  #     - "5601:5601"
-  #   environment:
-  #     OPENSEARCH_HOSTS: '["http://opensearch:9200"]'
-  #     DISABLE_SECURITY_DASHBOARDS_PLUGIN: "true"
-  #   depends_on:
-  #     - opensearch
-  #   networks:
-  #     - otel-network
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:2.11.1
+    container_name: opensearch-dashboards
+    ports:
+      - "5601:5601"
+    environment:
+      OPENSEARCH_HOSTS: '["http://opensearch:9200"]'
+      DISABLE_SECURITY_DASHBOARDS_PLUGIN: "true"
+    depends_on:
+      - opensearch
+    networks:
+      - otel-network
 
   # Jaeger - All-in-one
   jaeger:
@@ -49,6 +49,8 @@ services:
       - "16686:16686"
       - "14250:14250"
       - "14268:14268"
+      - "4319:4317"
+      - "4320:4318"
       - "6831:6831/udp"
       - "6832:6832/udp"
     environment:
